--- a/8PhysicsJS2/index.html
+++ b/8PhysicsJS2/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-    <script src="libs/functions.js"></script>
-    <script src="res/sprite.js"></script>
-    <script src="src/main.js"></script>
     <style>
         canvas{
             position:absolute;
@@ -15,6 +9,26 @@
             left: 0;
             right: 0;
         }
+
+        #myProgress {
+          position: relative;
+          width: 100%;
+          height: 30px;
+          background-color: #ddd;
+        }
+
+        #myBar {
+          position: absolute;
+          width: 1%;
+          height: 100%;
+          background-color: #4CAF50;
+        }
     </style>
+<head>
+</head>
+<body>
+    <script src="libs/functions.js"></script>
+    <script src="res/sprite.js"></script>
+    <script src="src/main.js"></script>
 </body>
 </html>
